--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+      <h3 class="project-contributor"> Indian Institute of Technology Bombay</h3>
       <a href="{{ site.github.arxiv }}" class="btn">Paper</a>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">Code</a>
