--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
     
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-      <h3 class="project-contributor">Royston Rodrigues, Neha Bhargava, Rajbabu Velmuruga, Subhasis Chaudhuri</h3>
+      <h3 class="project-contributor">Royston Rodrigues, Neha Bhargava, Rajbabu Velmurugan, Subhasis Chaudhuri</h3>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
 
       <a href="{{ site.github.arxiv }}" class="btn">Paper</a>
